<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="140dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="62dp"
        android:gravity="center"
        android:text="@string/atividade_de_fixa_o"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnmulti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnmulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="80dp"
        android:onClick="btnmulti"
        android:text="@string/exerc_cio_1_n_meros_multiplos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btncarda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="342dp"
        android:text="@string/exerc_cio_6_card_pio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnmulti"
        android:onClick="btncarda"
        />
</androidx.constraintlayout.widget.ConstraintLayout>